12.10.2(7053) beta