@@ -4,7 +4,8 @@ import java.util.HashMap;
 import java.util.Map;
 import ru.noties.jlatexmath.awt.Font;
 
-/* loaded from: classes3.dex */
+/* compiled from: r8-map-id-818410c928e26989539d9c43666f59979e404aa44db880373fadfbe90836d366 */
+/* loaded from: classes.dex */
 public class FontInfo {
     public static final int NUMBER_OF_CHAR_CODES = 256;
     private static Map<Integer, FontInfo> fonts = new HashMap();
@@ -34,13 +35,14 @@ public class FontInfo {
     private final Map<CharCouple, Float> kern = new HashMap();
     private char skewChar = 65535;
 
-    private class CharCouple {
+    /* compiled from: r8-map-id-818410c928e26989539d9c43666f59979e404aa44db880373fadfbe90836d366 */
+    public class CharCouple {
         private final char left;
         private final char right;
 
-        CharCouple(char c, char c2) {
-            this.left = c;
-            this.right = c2;
+        public CharCouple(char c10, char c11) {
+            this.left = c10;
+            this.right = c11;
         }
 
         public boolean equals(Object obj) {
@@ -53,205 +55,46 @@ public class FontInfo {
         }
     }
 
-    public FontInfo(int i, Object obj, String str, String str2, int i2, float f, float f2, float f3, String str3, String str4, String str5, String str6, String str7) {
+    public FontInfo(int i10, Object obj, String str, String str2, int i11, float f10, float f11, float f12, String str3, String str4, String str5, String str6, String str7) {
         this.unicode = null;
-        this.fontId = i;
+        this.fontId = i10;
         this.base = obj;
         this.path = str;
         this.fontName = str2;
-        this.xHeight = f;
-        this.space = f2;
-        this.quad = f3;
+        this.xHeight = f10;
+        this.space = f11;
+        this.quad = f12;
         this.boldVersion = str3;
         this.romanVersion = str4;
         this.ssVersion = str5;
         this.ttVersion = str6;
         this.itVersion = str7;
-        if (i2 != 0) {
-            this.unicode = new HashMap<>(i2);
+        if (i11 != 0) {
+            this.unicode = new HashMap<>(i11);
         } else {
-            i2 = 256;
+            i11 = 256;
         }
-        this.metrics = new float[i2][];
-        this.nextLarger = new CharFont[i2];
-        this.extensions = new int[i2][];
-        fonts.put(Integer.valueOf(i), this);
+        this.metrics = new float[i11][];
+        this.nextLarger = new CharFont[i11];
+        this.extensions = new int[i11][];
+        fonts.put(Integer.valueOf(i10), this);
     }
 
-    public void addKern(char c, char c2, float f) {
-        this.kern.put(new CharCouple(c, c2), new Float(f));
+    public void addKern(char c10, char c11, float f10) {
+        this.kern.put(new CharCouple(c10, c11), new Float(f10));
     }
 
-    public void addLigature(char c, char c2, char c3) {
-        this.lig.put(new CharCouple(c, c2), new Character(c3));
-    }
-
-    public int[] getExtension(char c) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            return this.extensions[c];
-        }
-        return this.extensions[hashMap.get(Character.valueOf(c)).charValue()];
-    }
-
-    public float getKern(char c, char c2, float f) {
-        Float f2 = this.kern.get(new CharCouple(c, c2));
-        if (f2 == null) {
-            return 0.0f;
-        }
-        return f2.floatValue() * f;
-    }
-
-    public CharFont getLigature(char c, char c2) {
-        Character ch = this.lig.get(new CharCouple(c, c2));
-        if (ch == null) {
-            return null;
-        }
-        return new CharFont(ch.charValue(), this.fontId);
-    }
-
-    public float[] getMetrics(char c) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            return this.metrics[c];
-        }
-        return this.metrics[hashMap.get(Character.valueOf(c)).charValue()];
-    }
-
-    public CharFont getNextLarger(char c) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            return this.nextLarger[c];
-        }
-        return this.nextLarger[hashMap.get(Character.valueOf(c)).charValue()];
-    }
-
-    public float getQuad(float f) {
-        return this.quad * f;
-    }
-
-    public char getSkewChar() {
-        return this.skewChar;
-    }
-
-    public float getSpace(float f) {
-        return this.space * f;
-    }
-
-    public float getXHeight(float f) {
-        return this.xHeight * f;
-    }
-
-    public boolean hasSpace() {
-        return this.space > 1.0E-7f;
-    }
-
-    public void setExtension(char c, int[] iArr) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            this.extensions[c] = iArr;
-        } else {
-            if (!hashMap.containsKey(Character.valueOf(c))) {
-                char size = (char) this.unicode.size();
-                this.unicode.put(Character.valueOf(c), Character.valueOf(size));
-                this.extensions[size] = iArr;
-                return;
-            }
-            this.extensions[this.unicode.get(Character.valueOf(c)).charValue()] = iArr;
-        }
-    }
-
-    public void setMetrics(char c, float[] fArr) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            this.metrics[c] = fArr;
-        } else {
-            if (!hashMap.containsKey(Character.valueOf(c))) {
-                char size = (char) this.unicode.size();
-                this.unicode.put(Character.valueOf(c), Character.valueOf(size));
-                this.metrics[size] = fArr;
-                return;
-            }
-            this.metrics[this.unicode.get(Character.valueOf(c)).charValue()] = fArr;
-        }
-    }
-
-    public void setNextLarger(char c, char c2, int i) {
-        HashMap<Character, Character> hashMap = this.unicode;
-        if (hashMap == null) {
-            this.nextLarger[c] = new CharFont(c2, i);
-        } else {
-            if (!hashMap.containsKey(Character.valueOf(c))) {
-                char size = (char) this.unicode.size();
-                this.unicode.put(Character.valueOf(c), Character.valueOf(size));
-                this.nextLarger[size] = new CharFont(c2, i);
-                return;
-            }
-            this.nextLarger[this.unicode.get(Character.valueOf(c)).charValue()] = new CharFont(c2, i);
-        }
-    }
-
-    public void setSkewChar(char c) {
-        this.skewChar = c;
-    }
-
-    public int getId() {
-        return this.fontId;
+    public void addLigature(char c10, char c11, char c12) {
+        this.lig.put(new CharCouple(c10, c11), new Character(c12));
     }
 
     public int getBoldId() {
         return this.boldId;
     }
 
-    public int getRomanId() {
-        return this.romanId;
-    }
-
-    public int getTtId() {
-        return this.ttId;
-    }
-
-    public int getItId() {
-        return this.itId;
-    }
-
-    public int getSsId() {
-        return this.ssId;
-    }
-
-    public void setSsId(int i) {
-        if (i == -1) {
-            i = this.fontId;
-        }
-        this.ssId = i;
-    }
-
-    public void setTtId(int i) {
-        if (i == -1) {
-            i = this.fontId;
-        }
-        this.ttId = i;
-    }
-
-    public void setItId(int i) {
-        if (i == -1) {
-            i = this.fontId;
-        }
-        this.itId = i;
-    }
-
-    public void setRomanId(int i) {
-        if (i == -1) {
-            i = this.fontId;
-        }
-        this.romanId = i;
-    }
-
-    public void setBoldId(int i) {
-        if (i == -1) {
-            i = this.fontId;
-        }
-        this.boldId = i;
+    public int[] getExtension(char c10) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        return hashMap == null ? this.extensions[c10] : this.extensions[hashMap.get(Character.valueOf(c10)).charValue()];
     }
 
     public Font getFont() {
@@ -265,7 +108,157 @@ public class FontInfo {
         return this.font;
     }
 
-    public static Font getFont(int i) {
-        return fonts.get(Integer.valueOf(i)).getFont();
+    public int getId() {
+        return this.fontId;
+    }
+
+    public int getItId() {
+        return this.itId;
+    }
+
+    public float getKern(char c10, char c11, float f10) {
+        Float f11 = this.kern.get(new CharCouple(c10, c11));
+        if (f11 == null) {
+            return 0.0f;
+        }
+        return f11.floatValue() * f10;
+    }
+
+    public CharFont getLigature(char c10, char c11) {
+        Character ch2 = this.lig.get(new CharCouple(c10, c11));
+        if (ch2 == null) {
+            return null;
+        }
+        return new CharFont(ch2.charValue(), this.fontId);
+    }
+
+    public float[] getMetrics(char c10) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        return hashMap == null ? this.metrics[c10] : this.metrics[hashMap.get(Character.valueOf(c10)).charValue()];
+    }
+
+    public CharFont getNextLarger(char c10) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        return hashMap == null ? this.nextLarger[c10] : this.nextLarger[hashMap.get(Character.valueOf(c10)).charValue()];
+    }
+
+    public float getQuad(float f10) {
+        return this.quad * f10;
+    }
+
+    public int getRomanId() {
+        return this.romanId;
+    }
+
+    public char getSkewChar() {
+        return this.skewChar;
+    }
+
+    public float getSpace(float f10) {
+        return this.space * f10;
+    }
+
+    public int getSsId() {
+        return this.ssId;
+    }
+
+    public int getTtId() {
+        return this.ttId;
+    }
+
+    public float getXHeight(float f10) {
+        return this.xHeight * f10;
+    }
+
+    public boolean hasSpace() {
+        return this.space > 1.0E-7f;
+    }
+
+    public void setBoldId(int i10) {
+        if (i10 == -1) {
+            i10 = this.fontId;
+        }
+        this.boldId = i10;
+    }
+
+    public void setExtension(char c10, int[] iArr) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        if (hashMap == null) {
+            this.extensions[c10] = iArr;
+        } else {
+            if (hashMap.containsKey(Character.valueOf(c10))) {
+                this.extensions[this.unicode.get(Character.valueOf(c10)).charValue()] = iArr;
+                return;
+            }
+            char size = (char) this.unicode.size();
+            this.unicode.put(Character.valueOf(c10), Character.valueOf(size));
+            this.extensions[size] = iArr;
+        }
+    }
+
+    public void setItId(int i10) {
+        if (i10 == -1) {
+            i10 = this.fontId;
+        }
+        this.itId = i10;
+    }
+
+    public void setMetrics(char c10, float[] fArr) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        if (hashMap == null) {
+            this.metrics[c10] = fArr;
+        } else {
+            if (hashMap.containsKey(Character.valueOf(c10))) {
+                this.metrics[this.unicode.get(Character.valueOf(c10)).charValue()] = fArr;
+                return;
+            }
+            char size = (char) this.unicode.size();
+            this.unicode.put(Character.valueOf(c10), Character.valueOf(size));
+            this.metrics[size] = fArr;
+        }
+    }
+
+    public void setNextLarger(char c10, char c11, int i10) {
+        HashMap<Character, Character> hashMap = this.unicode;
+        if (hashMap == null) {
+            this.nextLarger[c10] = new CharFont(c11, i10);
+        } else {
+            if (hashMap.containsKey(Character.valueOf(c10))) {
+                this.nextLarger[this.unicode.get(Character.valueOf(c10)).charValue()] = new CharFont(c11, i10);
+                return;
+            }
+            char size = (char) this.unicode.size();
+            this.unicode.put(Character.valueOf(c10), Character.valueOf(size));
+            this.nextLarger[size] = new CharFont(c11, i10);
+        }
+    }
+
+    public void setRomanId(int i10) {
+        if (i10 == -1) {
+            i10 = this.fontId;
+        }
+        this.romanId = i10;
+    }
+
+    public void setSkewChar(char c10) {
+        this.skewChar = c10;
+    }
+
+    public void setSsId(int i10) {
+        if (i10 == -1) {
+            i10 = this.fontId;
+        }
+        this.ssId = i10;
+    }
+
+    public void setTtId(int i10) {
+        if (i10 == -1) {
+            i10 = this.fontId;
+        }
+        this.ttId = i10;
+    }
+
+    public static Font getFont(int i10) {
+        return fonts.get(Integer.valueOf(i10)).getFont();
     }
 }
